@@ -64,6 +64,19 @@
 					<compilerArgument>-Werror</compilerArgument>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>​org.apache.maven.plugins​</groupId>
+				<artifactId>​maven-surefire-plugin​</artifactId>
+				<version>​2.12.2​</version>
+				<configuration>
+					<argLine>​-Duser.language=en​</argLine>
+					<argLine>​-Xmx1024m​</argLine>
+					<argLine>​-XX:MaxPermSize=256m​</argLine>
+					<argLine>​-Dfile.encoding=UTF-8​</argLine>
+					<useFile>​false​</useFile>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
